Fixes #2623 - white space issue on save component

--- a/src/styles/components/save/__save.sass
+++ b/src/styles/components/save/__save.sass
@@ -63,7 +63,6 @@
         box-shadow: none
         border: pxToRem(1) solid transparentize($uni-color-negative, .5)
         top: .32rem
-        width: 10rem
         overflow: hidden
         text-overflow: ellipsis
 
